# medical-image-captionning

./: .gitignore  Group_Meeting_Minutes_01_02_2022.doc  Group_Meeting_Minutes_01_03_2022__1_.doc  Group_Meeting_Minutes_02_02_2022.doc  Group_Meeting_Minutes_27_01_2022.docx  LICENSE  Makefile  README.md  checkpoints.dvc  data.dvc  predict-playground.ipynb  predict.py  pyproject.toml  setup.py
.dvc/: config
docs/: Makefile  conf.py  index.rst  make.bat
evaluation/ImageCLEF-ConceptDetection-Evaluation/: evaluate-f1.py  requirements.txt
minutes/: Group_Meeting_Minutes_18_01_2022.doc  Group_Meeting_Minutes_21_02_2022__1_.doc  Group_Meeting_Minutes_25_01_2022.docx  templates.md
mlruns/0/: meta.yaml
mlruns/0/00443e16999d43649b689694fa5b17d1/: meta.yaml
mlruns/0/01d893c4018141689e4d6c13c55dd3f8/: meta.yaml
mlruns/0/02b6f855d8d740148f8c5bbdd54ac91a/: meta.yaml
mlruns/0/04be5b1277b4427eba2569d2cc9d349c/: meta.yaml
mlruns/0/05d7232f60de40d3b8ee872700b14217/: meta.yaml
mlruns/0/0616f2717b0a425192bc59ff420ab1fe/: meta.yaml
mlruns/0/08274e8550db455889dd568df14f2966/: meta.yaml
mlruns/0/0ad0f1c0089b4291a68cb88aa94045e6/: meta.yaml
mlruns/0/0e69793535d649509cdd806c7889a2c1/: meta.yaml
mlruns/0/0e7f4f05184949abb58d3d4aff047799/: meta.yaml
mlruns/0/0e9be73401964fdcb4f61f7dbf045b3d/: meta.yaml
mlruns/0/0f17b35705de4525b1617664c80180c0/: meta.yaml
notebooks/: data-loader-playground.ipynb  image-caption-dataloader-playground.ipynb  tammay-image-caption.ipynb
src/: utils.py
src/data/: dataloader.py  vocabulary.py
src/models/: models.py  train_model.py
(+255 files in other folders)
